--- a/HeathCompanionApp/app/build.gradle
+++ b/HeathCompanionApp/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.2"
+
     defaultConfig {
-        applicationId "com.example.ajaychowdhary.ieeensit"
-        minSdkVersion 16
-        targetSdkVersion 24
+        applicationId "com.example.ajaychowdhary.popoopopop"
+        minSdkVersion 15
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -21,18 +21,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:design:24.2.1'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.android.support:support-v4:24.2.1'
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:gridlayout-v7:24.2.1'
-    compile 'com.google.firebase:firebase-messaging:9.6.0'
-    compile 'com.mcxiaoke.volley:library-aar:1.0.0'
-
+    compile 'com.android.support:appcompat-v7:23.1.1'
 }
-apply plugin: 'com.google.gms.google-services'
